[package]
name = "autorandr"
description = "Maximize resolution and refresh rate of all connected monitors and order them in an automatic layout. Currently the largest screen is always placed leftmost with smaller screens going to the right."
version = "1.0.0"
authors = ["Magnus Bergmark <magnus.bergmark@gmail.com>"]

[dependencies]
regex = "1.0.0"
structopt = "0.2.10"
